--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 </html>
 
-
+<script type="text/javascript"
+    src="https://app.sandbox.midtrans.com/snap/snap.js"
+    data-client-key="Mid-client-MsBvkLaejvT9RGSP">
+</script>
 
 
